# Homework

./: README.md  calculator.py  findfour.py
COP3504C HW/: findfour.py
COP3504C HW/C++/Lab 5/: CMakeLists.txt  analyzer.cpp
COP3504C HW/C++/Lab 6/: CMakeLists.txt  ConsoleGfx.cpp  ConsoleGfx.h  Image.cpp  Image.h  scaler.cpp
COP3504C HW/C++/Lab10/memeify/: CMakeLists.txt  main.cpp  memer.cpp  memer.h
COP3504C HW/C++/Lab7/: CMakeLists.txt  Cow.h  Dragon.cpp  Dragon.h  IceDragon.cpp  IceDragon.h  cowsay.cpp
COP3504C HW/C++/Lab8/: CMakeLists.txt  Cow.cpp  FileCow.cpp  FileCow.h  HeiferGenerator.cpp  HeiferGenerator.h  cowsay.cpp
COP3504C HW/C++/Project 4/Minesweeper/: Button.cpp  Button.h  CMakeLists.txt  GameState.cpp  GameState.h  Tile.cpp  Tile.h  Toolbox.cpp  Toolbox.h  minesweeper.cpp  minesweeper.h
COP3504C HW/Cowlab/: cow.py  cowsay.py  heifer_generator.py
COP3504C HW/Python/: calculator.py  findfour.py  stringdata.py
COP3504C HW/Python/Cowlab/: cow.py  cowsay.py  heifer_generator.py
COP3504C HW/Python/Pakudex/: pakudex.py  pakuri.py
COP3504C HW/Python/RLEwithImages/: rle_program.py
COP3504C HW/RLEwithImages/: P1 - TextOutput.txt  rle_program.py
CS50 Projects/pset1/credit/: credit.c
CS50 Projects/pset1/mario-more/: mario.c
CS50 Projects/pset1/population/: population.c
CS50 Projects/pset2/: triangle.c
CS50 Projects/pset2/scrabble/: scrabble.c
CS50 Projects/pset2/substitution/: substitution.c
CS50 Projects/pset2/wordle/: wordle.c
CS50 Projects/pset3/plurality/: plurality.c
CS50 Projects/pset3/runoff/: runoff.c
(+9 files in other folders)
